unpackaged/main/default/objects/Opportunity/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Full Member</fullName>
            </value>
            <value>
                <fullName>Special Composite</fullName>
            </value>
            <value>
                <fullName>Additional Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>