unpackaged/main/default/objects/Opportunity/fields/Min_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount_Due__c</fullName>
    <label>Min Amount Due</label>
    <summarizedField>OpportunityLineItem.Min_Amount_Due__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>