unpackaged/main/default/objects/Opportunity/fields/Moderator_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moderator/Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>