unpackaged/main/default/objects/Opportunity/fields/Moderator_Email_Code__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Email_Code__c</fullName>
    <formula>Moderator_Consultant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Email (Code)</label>
    <type>Text</type>
</CustomField>