unpackaged/main/default/objects/Opportunity/fields/Moderator_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Moderator_User_Id__c</fullName>
    <formula>CASESAFEID(Moderator_Consultant__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator/ConsultantID (18)</label>
    <type>Text</type>
</CustomField>