unpackaged/main/default/objects/Opportunity/fields/Month_Data_Needed__c.field-meta.xml
<CustomField>
    <fullName>Month_Data_Needed__c</fullName>
    <label>Month Data Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>