unpackaged/main/default/objects/Opportunity/fields/Monthly_Billing_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Billing_Subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Billing Subscriptions</label>
    <type>Checkbox</type>
</CustomField>