unpackaged/main/default/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Monthly Recurring Revenue</description>
    <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
    <label>MRR</label>
    <summarizedField>OpportunityLineItem.MRR__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>