unpackaged/main/default/objects/Opportunity/fields/Nbr_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Stores__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nbr of Stores</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>