unpackaged/main/default/objects/Opportunity/fields/NCM_Additional_Products_Interested__c.field-meta.xml
<CustomField>
    <fullName>NCM_Additional_Products_Interested__c</fullName>
    <label>NCM Additional Products Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>NCM_Product_Interest__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NCM_Business_Unit</valueSetName>
    </valueSet>
</CustomField>