unpackaged/main/default/objects/Opportunity/fields/NCM_Division__c.field-meta.xml
<CustomField>
    <fullName>NCM_Division__c</fullName>
    <description>NCM Divisional Owner of the Opportunity</description>
    <inlineHelpText>NCM Divisional Owner of the Opportunity</inlineHelpText>
    <label>NCM Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institute</fullName>
            </value>
            <value>
                <fullName>Retail Solutions</fullName>
            </value>
            <value>
                <fullName>Software Solutions</fullName>
            </value>
            <value>
                <fullName>360 Sales Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>