unpackaged/main/default/objects/Opportunity/fields/NCM_Proprietor__c.field-meta.xml
<CustomField>
    <fullName>NCM_Proprietor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NCM Employee who will own this product or service with the client</inlineHelpText>
    <label>NCM Proprietor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NCM_Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (NCM Proprietor)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>