unpackaged/main/default/objects/Opportunity/fields/NCM_Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>NCM_Support_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NCM Employee who assists client and NCM Proprietor for this service or product</inlineHelpText>
    <label>NCM Support Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NCM_Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (NCM Support Staff)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>