unpackaged/main/default/objects/Opportunity/fields/NCM_Support_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>NCM_Support_Staff_Email__c</fullName>
    <formula>NCM_Support_Staff__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCM Support Staff Email (Code)</label>
    <type>Text</type>
</CustomField>