unpackaged/main/default/objects/Opportunity/fields/NCMi_Amt__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NCMi Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>