unpackaged/main/default/objects/Opportunity/fields/NCMi_Cancellation_Oppty_Code__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Cancellation_Oppty_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a tech debt to get around automated system default of Prospecting - these opptys are created as cancellation fees and are built as Closed Won - THIS WILL NO LONGER BE NEEDED with NCMi CEM</description>
    <label>NCMi Cancellation Oppty (Code)</label>
    <type>Checkbox</type>
</CustomField>