unpackaged/main/default/objects/Opportunity/fields/NCMi_Course__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Course__c</fullName>
    <label>NCMi Course</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCMI - DESKING AND F&amp;I INTEGRATION</fullName>
            </value>
            <value>
                <fullName>NCMI - FINDING TOP TALENT</fullName>
            </value>
            <value>
                <fullName>NCMI - GENERAL MANAGEMENT EXEC PROGRAM</fullName>
            </value>
            <value>
                <fullName>NCMI - GENERAL SALES MANAGEMENT – MASTERY LEVEL</fullName>
            </value>
            <value>
                <fullName>NCMI - HOW TO LEAD IN THE DIGITAL MARKETPLACE</fullName>
            </value>
            <value>
                <fullName>NCMI - LEADING YOUR DEALERSHIP TEAM TO SUCCESS</fullName>
            </value>
            <value>
                <fullName>NCMI - MASTERING INTERNET SALES</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF ADVANCED FINANCIAL MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF COLLISION CENTER MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF EXPRESS SERVICE MANAGEMENT I</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF EXPRESS SERVICE MANAGEMENT II</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF FINANCIAL ANALYSIS</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF GENERAL MANAGEMENT I</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF GENERAL MANAGEMENT II</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF GENERAL SALES MANAGEMENT I</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF GENERAL SALES MANAGEMENT II</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF PARTS AND ACCESSORIES I</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF PARTS AND ACCESSORIES II</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF SERVICE MANAGEMENT I</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF SERVICE MANAGEMENT II</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF USED VEHICLE MANAGEMENT I</fullName>
            </value>
            <value>
                <fullName>NCMI - PRINCIPLES OF USED VEHICLE MANAGEMENT II</fullName>
            </value>
            <value>
                <fullName>NCMI - SALES &amp; MANAGEMENT COMPENSATION</fullName>
            </value>
            <value>
                <fullName>NCMI - SERVICE &amp; PARTS FOR SENIOR EXECUTIVES</fullName>
            </value>
            <value>
                <fullName>NCMI - SERVICE MANAGEMENT –MASTERY LEVEL</fullName>
            </value>
            <value>
                <fullName>NCMI - USED VEHICLE MANAGEMENT – MASTERY LEVEL</fullName>
            </value>
            <value>
                <fullName>NCMI - ONSITE TRAINING</fullName>
            </value>
            <value>
                <fullName>NCMI - WEBINARS</fullName>
            </value>
            <value>
                <fullName>NCMI - ON DEMAND SETUP FEE</fullName>
            </value>
            <value>
                <fullName>NCMI - ON DEMAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>