unpackaged/main/default/objects/Opportunity/fields/NCMi_Curr_Subscrip_Expiration__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Curr_Subscrip_Expiration__c</fullName>
    <description>If they already have a subscription put in the original date the subscription expires</description>
    <inlineHelpText>If they already have a subscription put in the original date the subscription expires</inlineHelpText>
    <label>NCMi Curr Subscrip Expiration</label>
    <type>Date</type>
</CustomField>