unpackaged/main/default/objects/Opportunity/fields/NCMi_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>NCMi_First_Contact__c</fullName>
    <label>First Contact</label>
    <type>Date</type>
</CustomField>