unpackaged/main/default/objects/Opportunity/fields/NCMI_Invoice_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>NCMI_Invoice_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCMI Invoice Email Sent</label>
    <type>Checkbox</type>
</CustomField>