unpackaged/main/default/objects/Opportunity/fields/NCMi_Monthly__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by Accounting to identify monthly billing on subscriptions</description>
    <label>NCMi Monthly</label>
    <type>Checkbox</type>
</CustomField>