unpackaged/main/default/objects/Opportunity/fields/NCMi_Paid_Seat__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Paid_Seat__c</fullName>
    <description>How many NCMi Paid Seats are on this Opportunity</description>
    <label>NCMi Paid Seat</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.NCMi_Paid_Seat2__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>