unpackaged/main/default/objects/Opportunity/fields/Need_Prof_Comp_Data__c.field-meta.xml
<CustomField>
    <fullName>Need_Prof_Comp_Data__c</fullName>
    <formula>IF(ISPICKVAL( Data_Prof_Comp__c, &#39;Yes&#39; ), &#39;&#39;, &#39;We will need your &#39; &amp; TEXT( Month_Data_Needed__c ) &amp; &#39; statement to process the profile comparison.&#39;)</formula>
    <label>Need Prof Comp Data</label>
    <type>Text</type>
</CustomField>