unpackaged/main/default/objects/Opportunity/fields/Negotiation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Complete__c</fullName>
    <label>Negotiation Complete</label>
    <type>Date</type>
</CustomField>