unpackaged/main/default/objects/Opportunity/fields/Negotiation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Detail__c</fullName>
    <label>Negotiation Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>