unpackaged/main/default/objects/Opportunity/fields/Negotiation_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Likelihood__c</fullName>
    <label>Negotiation Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>