unpackaged/main/default/objects/Opportunity/fields/Negotiation_Started__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Started__c</fullName>
    <label>Negotiation Started</label>
    <type>Date</type>
</CustomField>