unpackaged/main/default/objects/Opportunity/fields/Negotiation_Status__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Status__c</fullName>
    <label>Negotiation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Contract Language</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Additional Demo</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>