unpackaged/main/default/objects/Opportunity/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>New Opportunity</label>
    <type>Date</type>
</CustomField>