unpackaged/main/default/objects/Opportunity/fields/New_Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>New_Proprietary_Group__c</fullName>
    <inlineHelpText>If a new Proprietary Group is to be created, the new group number.</inlineHelpText>
    <label>New Proprietary Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>