unpackaged/main/default/objects/Opportunity/fields/New_Proprietary_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Proprietary_Group_Name__c</fullName>
    <description>If a new proprietary group is to be created, specify the new group name here.</description>
    <inlineHelpText>If a new proprietary group is to be created, specify the new group name here.</inlineHelpText>
    <label>New Proprietary Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>