unpackaged/main/default/objects/Opportunity/fields/Next_Consulting_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Next_Consulting_Meeting__c</fullName>
    <label>Next Consulting Meeting</label>
    <type>Date</type>
</CustomField>