unpackaged/main/default/objects/Opportunity/fields/Notes_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Lead__c</fullName>
    <label>Notes from Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>