unpackaged/main/default/objects/Opportunity/fields/NRR__c.field-meta.xml
<CustomField>
    <fullName>NRR__c</fullName>
    <description>Non-Recurring Revenue</description>
    <inlineHelpText>Non-Recurring Revenue</inlineHelpText>
    <label>NRR</label>
    <summarizedField>OpportunityLineItem.NRR__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>