unpackaged/main/default/objects/Opportunity/fields/OEM_Account__c.field-meta.xml
<CustomField>
    <fullName>OEM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM OEM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (OEM Account)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>