unpackaged/main/default/objects/Opportunity/fields/OEM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>OEM_Account_ID__c</fullName>
    <formula>OEM_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Account ID (Code)</label>
    <type>Text</type>
</CustomField>