unpackaged/main/default/objects/Opportunity/fields/OEM_Meeting_Created__c.field-meta.xml
<CustomField>
    <fullName>OEM_Meeting_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OEM Meeting Created</label>
    <type>Checkbox</type>
</CustomField>