unpackaged/main/default/objects/Opportunity/fields/OEM_Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OEM_Program_Start_Date__c</fullName>
    <label>OEM Program Start Date</label>
    <type>Date</type>
</CustomField>