unpackaged/main/default/objects/Opportunity/fields/OEM_Record__c.field-meta.xml
<CustomField>
    <fullName>OEM_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM Record</label>
    <referenceTo>OEM_Record__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>