unpackaged/main/default/objects/Opportunity/fields/OnDemand_Upgrade_Commission__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Upgrade_Commission__c</fullName>
    <label>OnDemand Upgrade Commission %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>85</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>