unpackaged/main/default/objects/Opportunity/fields/Online_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_URL__c</fullName>
    <label>Online Payment URL</label>
    <type>Url</type>
</CustomField>