unpackaged/main/default/objects/Opportunity/fields/Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products__c</fullName>
    <description>rollup summary of the Opportunity products on Opportunity.</description>
    <label>Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>