unpackaged/main/default/objects/Opportunity/fields/OpportunityID_18__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityID (18)</label>
    <type>Text</type>
</CustomField>