unpackaged/main/default/objects/Opportunity/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>