unpackaged/main/default/objects/Opportunity/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>