unpackaged/main/default/objects/Opportunity/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used primarily for Proprietary Group opportunities to enable Sales to create multiple opportunities at the same time: one for the main account (the &quot;00&quot; store) and others for the stores they bring into their proprietary group.</description>
    <inlineHelpText>Used primarily for Proprietary Group opportunities to enable Sales to create multiple opportunities at the same time: one for the main account (the &quot;00&quot; store) and others for the stores they bring into their proprietary group.</inlineHelpText>
    <label>Parent Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proprietary</value>
        </filterItems>
        <infoMessage>Select a Proprietary record type Opportunity</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
    <relationshipName>ChildOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>