unpackaged/main/default/objects/Opportunity/fields/PCM__c.field-meta.xml
<CustomField>
    <fullName>PCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCM?</label>
    <type>Checkbox</type>
</CustomField>