unpackaged/main/default/objects/Opportunity/fields/PCM_Amt__c.field-meta.xml
<CustomField>
    <fullName>PCM_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PCM Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>