unpackaged/main/default/objects/Opportunity/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <description>Pulled from the Account.</description>
    <label>Physical City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>