unpackaged/main/default/objects/Opportunity/fields/Physical_Country__c.field-meta.xml
<CustomField>
    <fullName>Physical_Country__c</fullName>
    <description>Pulling from the Account.</description>
    <label>Physical Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>