unpackaged/main/default/objects/Opportunity/fields/Physical_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Physical_State_Province__c</fullName>
    <description>Pulled from the Account.</description>
    <label>Physical State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>