unpackaged/main/default/objects/Opportunity/fields/Physical_Street__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street__c</fullName>
    <description>Pulled from the Account.</description>
    <label>Physical Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>