unpackaged/main/default/objects/Opportunity/fields/Physical_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip_Postal_Code__c</fullName>
    <description>Pulled from the Account.</description>
    <label>Physical Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>