unpackaged/main/default/objects/Opportunity/fields/Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Date__c</fullName>
    <description>When did this prospect see, or is scheduled to see, a demonstration of axcessa?</description>
    <label>Web Demo Date</label>
    <type>Date</type>
</CustomField>