unpackaged/main/default/objects/Opportunity/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Campaign Source</label>
    <type>Text</type>
</CustomField>