unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Last_Name__c</fullName>
    <label>Primary Contact Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>