unpackaged/main/default/objects/Opportunity/fields/Program_Created__c.field-meta.xml
<CustomField>
    <fullName>Program_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Created</label>
    <type>Checkbox</type>
</CustomField>