unpackaged/main/default/objects/Opportunity/fields/Proposal_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Accepted__c</fullName>
    <label>Proposal Accepted</label>
    <type>Date</type>
</CustomField>