unpackaged/main/default/objects/Opportunity/fields/Proposal_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Accepted_Date__c</fullName>
    <label>Proposal Accepted Date</label>
    <type>Date</type>
</CustomField>