unpackaged/main/default/objects/Opportunity/fields/Proposal_Postponed__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Postponed__c</fullName>
    <label>Proposal Postponed</label>
    <type>Date</type>
</CustomField>