unpackaged/main/default/objects/Opportunity/fields/Proposal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent__c</fullName>
    <description>Date stamped when Proposal Sent task has been marked complete</description>
    <label>Proposal Sent</label>
    <type>Date</type>
</CustomField>