unpackaged/main/default/objects/Opportunity/fields/Proposed_Meeting_Dates__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Meeting_Dates__c</fullName>
    <label>Proposed Meeting Dates</label>
    <type>TextArea</type>
</CustomField>