unpackaged/main/default/objects/Opportunity/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The existing proprietary group for this opportunity.</description>
    <inlineHelpText>The existing proprietary group for this opportunity.</inlineHelpText>
    <label>Proprietary Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Proprietary_Group__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Only Active groups are displayed.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>