unpackaged/main/default/objects/Opportunity/fields/Prospect_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Prospect_In_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect In Progress</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>