unpackaged/main/default/objects/Opportunity/fields/Prospect_Info_to_Mod__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Info_to_Mod__c</fullName>
    <label>Prospect Info to Mod</label>
    <type>Date</type>
</CustomField>