unpackaged/main/default/objects/Opportunity/fields/Prospect_Services__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Services__c</fullName>
    <label>Prospect Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prospect_Services</valueSetName>
    </valueSet>
</CustomField>