unpackaged/main/default/objects/Opportunity/fields/Prospect_Services_Code__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Services_Code__c</fullName>
    <formula>text( Prospect_Services__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Services (Code)</label>
    <type>Text</type>
</CustomField>