unpackaged/main/default/objects/Opportunity/fields/Purchased_Products__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Products__c</fullName>
    <label>Purchased Products</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>